<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/abc_btn_rating_star_on_mtrl_alpha" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/abc_btn_rating_star_on_mtrl_alpha" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/abc_btn_rating_star_on_mtrl_alpha" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/abc_btn_rating_star_on_mtrl_alpha" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/abc_btn_rating_star_on_mtrl_alpha" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/abc_btn_rating_star_on_mtrl_alpha" />
        </LinearLayout>

        <EditText
            android:id="@+id/clientName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/clientAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            android:inputType="number" />

        <EditText
            android:id="@+id/clientPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:inputType="phone" />


        <EditText
            android:id="@+id/clientCep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:inputType="number" />

        <EditText
            android:id="@+id/clientTipoDeLogradouro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tipoLogradouro" />

        <EditText
            android:id="@+id/clientLogradouro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/logradouro" />

        <EditText
            android:id="@+id/clientBairro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/bairro" />

        <EditText
            android:id="@+id/clientCidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cidade" />

        <EditText
            android:id="@+id/clientEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/estado" />


    </LinearLayout>
</ScrollView>
